my complete FindMyAgeAPP with kotlin

--- a/HelloWorldKotlin/app/src/main/res/layout/activity_main.xml
+++ b/HelloWorldKotlin/app/src/main/res/layout/activity_main.xml
@@ -48,8 +48,9 @@
         android:id="@+id/findMyAgeBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="65dp"
+        android:layout_marginTop="63dp"
         android:text="Get my age"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/showAgeTxv"
