--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.ui.activity.MainActivity"
+    android:background="@color/colorPrimary"
     android:layout_height="match_parent">
 
     <LinearLayout
