--- a/app/src/main/res/layout/cardiew_coin_detail.xml
+++ b/app/src/main/res/layout/cardiew_coin_detail.xml
@@ -15,47 +15,108 @@ android:layout_height="150dp">
             android:id="@+id/coinName"
             android:layout_width="122dp"
             android:layout_height="28dp"
-            android:layout_marginEnd="77dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="28dp"
             android:text="@string/coinName"
             android:textSize="22sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/space"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/coinImage"
             android:layout_width="52dp"
             android:layout_height="57dp"
-            android:layout_marginEnd="17dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="12dp"
             android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/coinId"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+            app:layout_constraintStart_toEndOf="@+id/textViewRank"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/btc" />
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@color/cardview_light_background" />
 
         <TextView
             android:id="@+id/coinId"
             android:layout_width="53dp"
             android:layout_height="29dp"
-            android:layout_marginEnd="11dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="28dp"
             android:text="@string/coinID"
+            android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
             app:layout_constraintEnd_toStartOf="@+id/space"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toEndOf="@+id/coinImage"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Space
             android:id="@+id/space"
-            android:layout_width="13dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="12dp"
+            android:layout_width="11dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="20dp"
             app:layout_constraintBottom_toBottomOf="@+id/coinId"
             app:layout_constraintEnd_toStartOf="@+id/coinName"
-            app:layout_constraintStart_toEndOf="@+id/coinId"
-            app:layout_constraintTop_toTopOf="@+id/coinId" />
+            app:layout_constraintTop_toTopOf="@+id/coinId"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/textViewRank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="28dp"
+            android:text="10"
+            android:textSize="20sp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="5dp"
+            android:layout_marginBottom="60dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@android:color/darker_gray"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="27dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/textView4"
+            app:layout_constraintHorizontal_bias="0.229"
+            app:layout_constraintStart_toStartOf="@+id/textViewRank" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="84dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/linearLayout" />
 
     </android.support.constraint.ConstraintLayout>
 
