--- a/app/src/main/res/layout/cardiew_coin_detail.xml
+++ b/app/src/main/res/layout/cardiew_coin_detail.xml
@@ -1,24 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-app:cardCornerRadius="10dp"
-android:layout_margin="10dp"
-android:layout_height="150dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="10dp"
+    android:layout_margin="10dp"
+    android:layout_height="150dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
-
             <ImageView
                 android:id="@+id/coinImage"
                 android:layout_width="52dp"
@@ -26,7 +23,6 @@ android:layout_height="150dp">
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                 app:layout_constraintStart_toEndOf="@+id/textViewRank"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
@@ -73,7 +69,7 @@ android:layout_height="150dp">
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
                 android:layout_marginTop="28dp"
-                android:text="10000000"
+                android:text="@string/_1000000"
                 android:textSize="20sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -85,7 +81,6 @@ android:layout_height="150dp">
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:background="@color/colorAccent" />
-
 
         <LinearLayout
             android:layout_width="match_parent"
