Solving the Koin dependencies issues

--- a/app/src/main/res/layout/cardiew_coin_detail.xml
+++ b/app/src/main/res/layout/cardiew_coin_detail.xml
@@ -1,129 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="10dp"
-    android:layout_margin="10dp"
-    android:layout_height="150dp">
-
-    <LinearLayout
+    <com.projects.enzoftware.cryptotracker.ui.CurrencyView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+        android:padding="16dp"
+        android:id="@+id/view_currency_item"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
-            <ImageView
-                android:id="@+id/coinImage"
-                android:layout_width="52dp"
-                android:layout_height="52dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintStart_toEndOf="@+id/textViewRank"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@color/cardview_light_background"
-                android:contentDescription="@string/contentDescriptionCryptoCoin" />
+        android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/coinId"
-                android:layout_width="wrap_content"
-                android:layout_height="29dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="28dp"
-                android:text="@string/coinID"
-                android:textColor="@android:color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/coinName"
-                android:layout_width="wrap_content"
-                android:layout_height="28dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginTop="28dp"
-                android:text="@string/coinName"
-                android:textSize="22sp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/dolar_symbol"
-                android:textStyle="bold"
-                android:textColor="@android:color/black"
-                android:layout_marginStart="1dp"
-                android:layout_marginTop="28dp"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/textViewRank"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:layout_marginTop="28dp"
-                android:text="@string/_1000000"
-                android:textSize="20sp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </LinearLayout>
-
-        <Space
-            android:id="@+id/space"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:background="@color/colorAccent" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/changeHours"
-                android:textStyle="bold"
-                android:textColor="@android:color/black"
-                android:layout_marginStart="20dp"
-                android:textSize="20sp"/>
-
-            <TextView
-                android:id="@+id/change24h"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:text="@string/lorem" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/changeWeek"
-                android:textStyle="bold"
-                android:textColor="@android:color/black"
-                android:layout_marginStart="50dp"
-                android:textSize="20sp"/>
-
-            <TextView
-                android:id="@+id/change7d"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:textStyle="bold"
-                android:textSize="20sp"
-                android:text="@string/lorem" />
-
-        </LinearLayout>
-    </LinearLayout>
-</android.support.v7.widget.CardView>
